--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Massively by HTML5 UP</title>
+		<title>Hassam Aslam</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -56,8 +56,9 @@
 									<p>I'm a passionate gamer and a computer science student who is eager to become a game developer</p>
 								</header>
 								<a href="#" class="image main"><img src="images/Sample8.jpg" alt="" /></a>
+								<p>(Working on an personal project of open world game on Unreal Engine.)</p>
 								<ul class="actions special">
-									<li><a href="#" class="button large">Check it out!</a></li>
+									<li><a href="#" class="button large">Work in Progress!</a></li>
 								</ul>
 							</article>
 
@@ -65,22 +66,32 @@
 							<section class="posts">
 								<article>
 									<header></header>
-										<h2><a href="#">Project 1</a></h2>
+										<h2><a href="#">Pirates and Zombies</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="#" class="image fit"><img src="images/PiratesAndZombies.jpg" alt="" /></a>
+									<p>To Be Annouced.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="#" class="button">To be Announced.</a></li>
+									</ul>
+								</article>
+								<article>
+									<header></header>
+										<h2><a href="#">Ball Game</a></h2>
+									</header>
+									<a href="#" class="image fit"><img src="images/Sample.jpg" alt="" /></a>
+									<p>A isometric game where the player needs to dodge the balls spawning on the platform without falling from the platform.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/IamHunterX/Ball_Dodge_Game" class="button">GITHUB</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<h2><a href="#">Project 2</a></h2>
+										<h2><a href="#">Multiplayer Car Game</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="#" class="image fit"><img src="images/Unity Project 1.jpg" alt="" /></a>
+									<p>A Multiplayer car game made on Unity.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://github.com/IamHunterX/Unity_Project_1" class="button">GITHUB</a></li>
 									</ul>
 								</article>
 							</section>
@@ -94,24 +105,24 @@
 						<section class="split contact">
 							<section class="alt">
 								<h3>Address</h3>
-								<p>1234 Somewhere Road #87257<br />
-								Nashville, TN 00000-0000</p>
+								<p>FM-82, B-Area, FFC Township<br />
+								Sadiqabad, Rahim Yar Khan, Punjab, Pakistan</p>
 							</section>
 							<section>
 								<h3>Phone</h3>
-								<p><a href="#">(000) 000-0000</a></p>
+								<p><a href="#">(+92) 303-7296437</a></p>
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">info@untitled.tld</a></p>
+								<p><a href="#">aslamhassam1122@hotmail.com</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
 								<ul class="icons alt">
-									<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://www.linkedin.com/in/hassam-aslam-789b21228/" class="icon brands alt fa-linkedin"><span class="label">Twitter</span></a></li>
+									<li><a href="https://www.facebook.com/hassam.aslam.5621" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
+									<li><a href="https://www.instagram.com/hassam_aslam_/" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+									<li><a href="https://github.com/IamHunterX" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</section>
 						</section>
